--- a/src/index.css
+++ b/src/index.css
@@ -95,10 +95,13 @@ All colors MUST be HSL.
     @apply border-border;
   }
 
-  html,
+  html {
+    height: 100%;
+  }
+
   body,
   #root {
-    height: 100%;
+    min-height: 100%;
   }
 
   body {
