--- a/android/app/src/main/res/drawable/widget_background.xml
+++ b/android/app/src/main/res/drawable/widget_background.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android" android:shape="rectangle">
-    <solid android:color="#4D7C0F"/> <!-- Primary Green (65a30d approx) -->
-    <corners android:radius="24dp"/>
+    <solid android:color="@color/widget_background"/>
+    <corners android:radius="22dp"/>
 </shape>
