[dyad] Refuerzo de configuración de Widgets Android - wrote 8 file(s)

--- a/android/app/src/main/res/xml/streak_widget_info.xml
+++ b/android/app/src/main/res/xml/streak_widget_info.xml
@@ -5,6 +5,7 @@
     android:updatePeriodMillis="1800000"
     android:previewImage="@mipmap/ic_launcher"
     android:initialLayout="@layout/streak_widget"
+    android:description="@string/widget_streak_desc"
     android:resizeMode="horizontal|vertical"
     android:widgetCategory="home_screen">
 </appwidget-provider>
