--- a/android/app/src/main/res/xml/water_widget_info.xml
+++ b/android/app/src/main/res/xml/water_widget_info.xml
@@ -5,6 +5,7 @@
     android:updatePeriodMillis="1800000"
     android:previewImage="@mipmap/ic_launcher"
     android:initialLayout="@layout/water_widget"
+    android:description="@string/widget_water_desc"
     android:resizeMode="horizontal|vertical"
     android:widgetCategory="home_screen">
 </appwidget-provider>
